# MetaGoogler

./: .env.example  .gitignore  AI_FEATURE_GUIDE.md  INTERNET_COVER_ART_GUIDE.md  MOBILE_APP_SUMMARY.md  Makefile  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.txt  PHASE_3_COMPLETION_REPORT.md  README.md  ai_manager.py  app_gui.py  batch_process.py  config.json  config_manager.py  cover_art_fetcher.py  fetch_album_covers.py  metadatafixer-gui.spec  metadatafixer.spec  metadatafixer_gui.spec  pyproject.toml  requirements.txt  setup.py  song_identifier.py  song_metadata_fixer.py  song_metadata_fixer_v2.py  suggestion_window.py  test_ai_feature.py  test_cover_art.py  test_gui_sidebar.py
config/: settings.example.json
docs/: COVER_ART_GUIDE.md  MCP_LITELLM_GUIDE.md  MCP_LITELLM_QUICK_REF.md  PHASE1_COMPLETE.md  PROJECT_STRUCTURE.md  SETUP_ACRCLOUD.md  SONG_IDENTIFICATION_GUIDE.md
mobile_app/: .gitignore  DEBUG_GUIDE.md  DEVELOPMENT.md  PLAN.md  README.md  SESSION_COMPLETE.md  STARTUP_GUIDE.md  TESTING_GUIDE.md  app.json  index.js  index.web.js  package-lock.json  package.json  tsconfig.json
mobile_app/src/: App.tsx  AppDebug.tsx  AppWeb.tsx  AppWebInteractive.tsx  index.ts
mobile_app/src/components/: AlbumArt.tsx  PlayerControls.tsx  SongListItem.tsx
mobile_app/src/data/: mockSongs.ts
mobile_app/src/navigation/: RootNavigator.tsx
mobile_app/src/redux/: hooks.ts  store.ts
mobile_app/src/redux/slices/: librarySlice.ts  playerSlice.ts  settingsSlice.ts
mobile_app/src/screens/: LibraryScreen.tsx  NowPlayingScreen.tsx  PlaylistsScreen.tsx  SettingsScreen.tsx
mobile_app/src/services/: auddService.ts  audioService.ts  libraryService.ts  metadataService.ts
mobile_app/src/types/: index.ts
src/: ai_manager_v2.py  app_gui.py  main.py  song_identifier.py  song_metadata_fixer_v2.py
src/utils/: config_manager.py  logger_setup.py
